fix: arrows now display correctly on mobile

--- a/departure/src/components/DepartureFDE.scss
+++ b/departure/src/components/DepartureFDE.scss
@@ -103,9 +103,7 @@ $borderThin: 1px solid black;
 
   .arrow {
     width: 10%;
-    margin-top: -2%;
     font-size: $fontSizeXl;
-    transform: scale(1.3);
   }
 
   .additionalInfo {
